y.output
Terminals unused in grammar

   BREAK
   GOTO
   FID
   FNAME
   CONC


State 6 conflicts: 2 shift/reduce
State 32 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 114 conflicts: 2 reduce/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: list_of_statements

    2 list_of_statements: statement
    3                   | list_of_statements statement

    4 statement: list_of_id '=' list_of_assignable
    5          | LOCAL list_of_id '=' list_of_assignable
    6          | LOCAL list_of_id ';'
    7          | LOCAL list_of_id
    8          | func_def
    9          | func_call
   10          | RETURN func_returnable
   11          | IF expr THEN list_of_statements elseif_block
   12          | WHILE expr DO list_of_statements END
   13          | REPEAT list_of_statements UNTIL expr
   14          | FOR ID '=' list_of_assignable DO list_of_statements END
   15          | FOR list_of_id IN assignable DO list_of_statements END

   16 elseif_block: END
   17             | ELSE list_of_statements END
   18             | ELSEIF expr THEN list_of_statements elseif_block

   19 list_of_id: ID
   20           | list_of_id ',' ID

   21 list_of_assignable: list_of_assignable ',' expr
   22                   | expr

   23 list_of_assignable_without_func_def: list_of_assignable_without_func_def ',' expr_without_func_def
   24                                    | expr_without_func_def

   25 expr_without_func_def: NOT expr_without_func_def
   26                      | assignable_without_func_def EQ expr_without_func_def
   27                      | assignable_without_func_def NE expr_without_func_def
   28                      | assignable_without_func_def LE expr_without_func_def
   29                      | assignable_without_func_def GE expr_without_func_def
   30                      | assignable_without_func_def '<' expr_without_func_def
   31                      | assignable_without_func_def '>' expr_without_func_def
   32                      | assignable_without_func_def AND expr_without_func_def
   33                      | assignable_without_func_def OR expr_without_func_def
   34                      | assignable_without_func_def ',' expr_without_func_def
   35                      | assignable_without_func_def '+' expr_without_func_def
   36                      | assignable_without_func_def '-' expr_without_func_def
   37                      | assignable_without_func_def '*' expr_without_func_def
   38                      | assignable_without_func_def '/' expr_without_func_def
   39                      | assignable_without_func_def '%' expr_without_func_def
   40                      | '(' expr_without_func_def ')'
   41                      | assignable_without_func_def

   42 assignable_without_func_def: ID
   43                            | NUM
   44                            | '-' NUM
   45                            | STRING
   46                            | NIL
   47                            | TRUE
   48                            | FALSE
   49                            | func_call
   50                            | table_index
   51                            | table_def

   52 table_index: ID '[' expr ']'

   53 expr: NOT expr
   54     | assignable EQ expr
   55     | assignable NE expr
   56     | assignable LE expr
   57     | assignable GE expr
   58     | assignable '<' expr
   59     | assignable '>' expr
   60     | assignable AND expr
   61     | assignable OR expr
   62     | assignable ',' expr
   63     | assignable '+' expr
   64     | assignable '-' expr
   65     | assignable '*' expr
   66     | assignable '/' expr
   67     | assignable '%' expr
   68     | '(' expr ')'
   69     | assignable

   70 assignable: assignable_without_func_def
   71           | nameles_func_def

   72 func_call: ID '(' list_of_assignable ')'
   73          | ID '(' DOTS ')'
   74          | ID '(' ')'
   75          | ID table_def
   76          | ID STRING

   77 table_def: '{' '}'
   78          | '{' list_of_assignable '}'
   79          | '{' assign_list '}'

   80 assign_list: table_assign
   81            | assign_list ',' table_assign

   82 table_assign: ID '=' assignable
   83             | '[' expr ']' '=' assignable

   84 func_def: FUNCTION ID '(' list_of_func_arg ')' list_of_statements END
   85         | LOCAL FUNCTION ID '(' list_of_func_arg ')' list_of_statements END
   86         | FUNCTION ID '(' ')' list_of_statements END
   87         | LOCAL FUNCTION ID '(' ')' list_of_statements END
   88         | FUNCTION ID '(' ')' END
   89         | LOCAL FUNCTION ID '(' ')' END

   90 nameles_func_def: FUNCTION '(' ')' list_of_statements END
   91                 | FUNCTION '(' list_of_func_arg ')' list_of_statements END

   92 list_of_func_arg: func_arg
   93                 | list_of_func_arg ',' func_arg

   94 func_returnable: list_of_assignable_without_func_def
   95                | nameles_func_def
   96                | %empty

   97 func_arg: list_of_assignable
   98         | list_of_id


Terminals, with rules where they appear

$end (0) 0
'%' (37) 39 67
'(' (40) 40 68 72 73 74 84 85 86 87 88 89 90 91
')' (41) 40 68 72 73 74 84 85 86 87 88 89 90 91
'*' (42) 37 65
'+' (43) 35 63
',' (44) 20 21 23 34 62 81 93
'-' (45) 36 44 64
'/' (47) 38 66
';' (59) 6
'<' (60) 30 58
'=' (61) 4 5 14 82 83
'>' (62) 31 59
'[' (91) 52 83
']' (93) 52 83
'{' (123) 77 78 79
'}' (125) 77 78 79
error (256)
AND (258) 32 60
BREAK (259)
DO (260) 12 14 15
ELSE (261) 17
ELSEIF (262) 18
END (263) 12 14 15 16 17 84 85 86 87 88 89 90 91
FALSE (264) 48
GOTO (265)
FOR (266) 14 15
FUNCTION (267) 84 85 86 87 88 89 90 91
IF (268) 11
IN (269) 15
LOCAL (270) 5 6 7 85 87 89
NIL (271) 46
NOT (272) 25 53
OR (273) 33 61
REPEAT (274) 13
RETURN (275) 10
THEN (276) 11 18
TRUE (277) 47
UNTIL (278) 13
WHILE (279) 12
ID (280) 14 19 20 42 52 72 73 74 75 76 82 84 85 86 87 88 89
FID (281)
NUM (282) 43 44
STRING (283) 45 76
FNAME (284)
NE (285) 27 55
EQ (286) 26 54
LE (287) 28 56
GE (288) 29 57
CONC (289)
DOTS (290) 73


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 1, on right: 0
list_of_statements (54)
    on left: 2 3, on right: 1 3 11 12 13 14 15 17 18 84 85 86 87 90
    91
statement (55)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 3
elseif_block (56)
    on left: 16 17 18, on right: 11 18
list_of_id (57)
    on left: 19 20, on right: 4 5 6 7 15 20 98
list_of_assignable (58)
    on left: 21 22, on right: 4 5 14 21 72 78 97
list_of_assignable_without_func_def (59)
    on left: 23 24, on right: 23 94
expr_without_func_def (60)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right:
    23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
assignable_without_func_def (61)
    on left: 42 43 44 45 46 47 48 49 50 51, on right: 26 27 28 29 30
    31 32 33 34 35 36 37 38 39 41 70
table_index (62)
    on left: 52, on right: 50
expr (63)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69, on right:
    11 12 13 18 21 22 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 83
assignable (64)
    on left: 70 71, on right: 15 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 69 82 83
func_call (65)
    on left: 72 73 74 75 76, on right: 9 49
table_def (66)
    on left: 77 78 79, on right: 51 75
assign_list (67)
    on left: 80 81, on right: 79 81
table_assign (68)
    on left: 82 83, on right: 80 81
func_def (69)
    on left: 84 85 86 87 88 89, on right: 8
nameles_func_def (70)
    on left: 90 91, on right: 71 95
list_of_func_arg (71)
    on left: 92 93, on right: 84 85 91 93
func_returnable (72)
    on left: 94 95 96, on right: 10
func_arg (73)
    on left: 97 98, on right: 92 93


State 0

    0 $accept: . program $end

    FOR       shift, and go to state 1
    FUNCTION  shift, and go to state 2
    IF        shift, and go to state 3
    LOCAL     shift, and go to state 4
    REPEAT    shift, and go to state 5
    RETURN    shift, and go to state 6
    WHILE     shift, and go to state 7
    ID        shift, and go to state 8

    program             go to state 9
    list_of_statements  go to state 10
    statement           go to state 11
    list_of_id          go to state 12
    func_call           go to state 13
    func_def            go to state 14


State 1

   14 statement: FOR . ID '=' list_of_assignable DO list_of_statements END
   15          | FOR . list_of_id IN assignable DO list_of_statements END

    ID  shift, and go to state 15

    list_of_id  go to state 16


State 2

   84 func_def: FUNCTION . ID '(' list_of_func_arg ')' list_of_statements END
   86         | FUNCTION . ID '(' ')' list_of_statements END
   88         | FUNCTION . ID '(' ')' END

    ID  shift, and go to state 17


State 3

   11 statement: IF . expr THEN list_of_statements elseif_block

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28

    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 31
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    nameles_func_def             go to state 35


State 4

    5 statement: LOCAL . list_of_id '=' list_of_assignable
    6          | LOCAL . list_of_id ';'
    7          | LOCAL . list_of_id
   85 func_def: LOCAL . FUNCTION ID '(' list_of_func_arg ')' list_of_statements END
   87         | LOCAL . FUNCTION ID '(' ')' list_of_statements END
   89         | LOCAL . FUNCTION ID '(' ')' END

    FUNCTION  shift, and go to state 36
    ID        shift, and go to state 37

    list_of_id  go to state 38


State 5

   13 statement: REPEAT . list_of_statements UNTIL expr

    FOR       shift, and go to state 1
    FUNCTION  shift, and go to state 2
    IF        shift, and go to state 3
    LOCAL     shift, and go to state 4
    REPEAT    shift, and go to state 5
    RETURN    shift, and go to state 6
    WHILE     shift, and go to state 7
    ID        shift, and go to state 8

    list_of_statements  go to state 39
    statement           go to state 11
    list_of_id          go to state 12
    func_call           go to state 13
    func_def            go to state 14


State 6

   10 statement: RETURN . func_returnable

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 40
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 41
    '{'       shift, and go to state 28

    FUNCTION  [reduce using rule 96 (func_returnable)]
    ID        [reduce using rule 96 (func_returnable)]
    $default  reduce using rule 96 (func_returnable)

    list_of_assignable_without_func_def  go to state 42
    expr_without_func_def                go to state 43
    assignable_without_func_def          go to state 44
    table_index                          go to state 30
    func_call                            go to state 33
    table_def                            go to state 34
    nameles_func_def                     go to state 45
    func_returnable                      go to state 46


State 7

   12 statement: WHILE . expr DO list_of_statements END

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28

    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 47
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    nameles_func_def             go to state 35


State 8

   19 list_of_id: ID .
   72 func_call: ID . '(' list_of_assignable ')'
   73          | ID . '(' DOTS ')'
   74          | ID . '(' ')'
   75          | ID . table_def
   76          | ID . STRING

    STRING  shift, and go to state 48
    '('     shift, and go to state 49
    '{'     shift, and go to state 28

    $default  reduce using rule 19 (list_of_id)

    table_def  go to state 50


State 9

    0 $accept: program . $end

    $end  shift, and go to state 51


State 10

    1 program: list_of_statements .
    3 list_of_statements: list_of_statements . statement

    FOR       shift, and go to state 1
    FUNCTION  shift, and go to state 2
    IF        shift, and go to state 3
    LOCAL     shift, and go to state 4
    REPEAT    shift, and go to state 5
    RETURN    shift, and go to state 6
    WHILE     shift, and go to state 7
    ID        shift, and go to state 8

    $default  reduce using rule 1 (program)

    statement   go to state 52
    list_of_id  go to state 12
    func_call   go to state 13
    func_def    go to state 14


State 11

    2 list_of_statements: statement .

    $default  reduce using rule 2 (list_of_statements)


State 12

    4 statement: list_of_id . '=' list_of_assignable
   20 list_of_id: list_of_id . ',' ID

    '='  shift, and go to state 53
    ','  shift, and go to state 54


State 13

    9 statement: func_call .

    $default  reduce using rule 9 (statement)


State 14

    8 statement: func_def .

    $default  reduce using rule 8 (statement)


State 15

   14 statement: FOR ID . '=' list_of_assignable DO list_of_statements END
   19 list_of_id: ID .

    '='  shift, and go to state 55

    $default  reduce using rule 19 (list_of_id)


State 16

   15 statement: FOR list_of_id . IN assignable DO list_of_statements END
   20 list_of_id: list_of_id . ',' ID

    IN   shift, and go to state 56
    ','  shift, and go to state 54


State 17

   84 func_def: FUNCTION ID . '(' list_of_func_arg ')' list_of_statements END
   86         | FUNCTION ID . '(' ')' list_of_statements END
   88         | FUNCTION ID . '(' ')' END

    '('  shift, and go to state 57


State 18

   48 assignable_without_func_def: FALSE .

    $default  reduce using rule 48 (assignable_without_func_def)


State 19

   90 nameles_func_def: FUNCTION . '(' ')' list_of_statements END
   91                 | FUNCTION . '(' list_of_func_arg ')' list_of_statements END

    '('  shift, and go to state 58


State 20

   46 assignable_without_func_def: NIL .

    $default  reduce using rule 46 (assignable_without_func_def)


State 21

   53 expr: NOT . expr

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28

    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 59
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    nameles_func_def             go to state 35


State 22

   47 assignable_without_func_def: TRUE .

    $default  reduce using rule 47 (assignable_without_func_def)


State 23

   42 assignable_without_func_def: ID .
   52 table_index: ID . '[' expr ']'
   72 func_call: ID . '(' list_of_assignable ')'
   73          | ID . '(' DOTS ')'
   74          | ID . '(' ')'
   75          | ID . table_def
   76          | ID . STRING

    STRING  shift, and go to state 48
    '('     shift, and go to state 49
    '['     shift, and go to state 60
    '{'     shift, and go to state 28

    $default  reduce using rule 42 (assignable_without_func_def)

    table_def  go to state 50


State 24

   43 assignable_without_func_def: NUM .

    $default  reduce using rule 43 (assignable_without_func_def)


State 25

   45 assignable_without_func_def: STRING .

    $default  reduce using rule 45 (assignable_without_func_def)


State 26

   44 assignable_without_func_def: '-' . NUM

    NUM  shift, and go to state 61


State 27

   68 expr: '(' . expr ')'

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '{'       shift, and go to state 28

    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 62
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    nameles_func_def             go to state 35


State 28

   77 table_def: '{' . '}'
   78          | '{' . list_of_assignable '}'
   79          | '{' . assign_list '}'

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 63
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    '['       shift, and go to state 64
    '{'       shift, and go to state 28
    '}'       shift, and go to state 65

    list_of_assignable           go to state 66
    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 67
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    assign_list                  go to state 68
    table_assign                 go to state 69
    nameles_func_def             go to state 35


State 29

   70 assignable: assignable_without_func_def .

    $default  reduce using rule 70 (assignable)


State 30

   50 assignable_without_func_def: table_index .

    $default  reduce using rule 50 (assignable_without_func_def)


State 31

   11 statement: IF expr . THEN list_of_statements elseif_block

    THEN  shift, and go to state 70


State 32

   54 expr: assignable . EQ expr
   55     | assignable . NE expr
   56     | assignable . LE expr
   57     | assignable . GE expr
   58     | assignable . '<' expr
   59     | assignable . '>' expr
   60     | assignable . AND expr
   61     | assignable . OR expr
   62     | assignable . ',' expr
   63     | assignable . '+' expr
   64     | assignable . '-' expr
   65     | assignable . '*' expr
   66     | assignable . '/' expr
   67     | assignable . '%' expr
   69     | assignable .

    AND  shift, and go to state 71
    OR   shift, and go to state 72
    NE   shift, and go to state 73
    EQ   shift, and go to state 74
    LE   shift, and go to state 75
    GE   shift, and go to state 76
    ','  shift, and go to state 77
    '<'  shift, and go to state 78
    '>'  shift, and go to state 79
    '+'  shift, and go to state 80
    '-'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '%'  shift, and go to state 84

    ','       [reduce using rule 69 (expr)]
    $default  reduce using rule 69 (expr)


State 33

   49 assignable_without_func_def: func_call .

    $default  reduce using rule 49 (assignable_without_func_def)


State 34

   51 assignable_without_func_def: table_def .

    $default  reduce using rule 51 (assignable_without_func_def)


State 35

   71 assignable: nameles_func_def .

    $default  reduce using rule 71 (assignable)


State 36

   85 func_def: LOCAL FUNCTION . ID '(' list_of_func_arg ')' list_of_statements END
   87         | LOCAL FUNCTION . ID '(' ')' list_of_statements END
   89         | LOCAL FUNCTION . ID '(' ')' END

    ID  shift, and go to state 85


State 37

   19 list_of_id: ID .

    $default  reduce using rule 19 (list_of_id)


State 38

    5 statement: LOCAL list_of_id . '=' list_of_assignable
    6          | LOCAL list_of_id . ';'
    7          | LOCAL list_of_id .
   20 list_of_id: list_of_id . ',' ID

    '='  shift, and go to state 86
    ';'  shift, and go to state 87
    ','  shift, and go to state 54

    $default  reduce using rule 7 (statement)


State 39

    3 list_of_statements: list_of_statements . statement
   13 statement: REPEAT list_of_statements . UNTIL expr

    FOR       shift, and go to state 1
    FUNCTION  shift, and go to state 2
    IF        shift, and go to state 3
    LOCAL     shift, and go to state 4
    REPEAT    shift, and go to state 5
    RETURN    shift, and go to state 6
    UNTIL     shift, and go to state 88
    WHILE     shift, and go to state 7
    ID        shift, and go to state 8

    statement   go to state 52
    list_of_id  go to state 12
    func_call   go to state 13
    func_def    go to state 14


State 40

   25 expr_without_func_def: NOT . expr_without_func_def

    FALSE   shift, and go to state 18
    NIL     shift, and go to state 20
    NOT     shift, and go to state 40
    TRUE    shift, and go to state 22
    ID      shift, and go to state 23
    NUM     shift, and go to state 24
    STRING  shift, and go to state 25
    '-'     shift, and go to state 26
    '('     shift, and go to state 41
    '{'     shift, and go to state 28

    expr_without_func_def        go to state 89
    assignable_without_func_def  go to state 44
    table_index                  go to state 30
    func_call                    go to state 33
    table_def                    go to state 34


State 41

   40 expr_without_func_def: '(' . expr_without_func_def ')'

    FALSE   shift, and go to state 18
    NIL     shift, and go to state 20
    NOT     shift, and go to state 40
    TRUE    shift, and go to state 22
    ID      shift, and go to state 23
    NUM     shift, and go to state 24
    STRING  shift, and go to state 25
    '-'     shift, and go to state 26
    '('     shift, and go to state 41
    '{'     shift, and go to state 28

    expr_without_func_def        go to state 90
    assignable_without_func_def  go to state 44
    table_index                  go to state 30
    func_call                    go to state 33
    table_def                    go to state 34


State 42

   23 list_of_assignable_without_func_def: list_of_assignable_without_func_def . ',' expr_without_func_def
   94 func_returnable: list_of_assignable_without_func_def .

    ','  shift, and go to state 91

    $default  reduce using rule 94 (func_returnable)


State 43

   24 list_of_assignable_without_func_def: expr_without_func_def .

    $default  reduce using rule 24 (list_of_assignable_without_func_def)


State 44

   26 expr_without_func_def: assignable_without_func_def . EQ expr_without_func_def
   27                      | assignable_without_func_def . NE expr_without_func_def
   28                      | assignable_without_func_def . LE expr_without_func_def
   29                      | assignable_without_func_def . GE expr_without_func_def
   30                      | assignable_without_func_def . '<' expr_without_func_def
   31                      | assignable_without_func_def . '>' expr_without_func_def
   32                      | assignable_without_func_def . AND expr_without_func_def
   33                      | assignable_without_func_def . OR expr_without_func_def
   34                      | assignable_without_func_def . ',' expr_without_func_def
   35                      | assignable_without_func_def . '+' expr_without_func_def
   36                      | assignable_without_func_def . '-' expr_without_func_def
   37                      | assignable_without_func_def . '*' expr_without_func_def
   38                      | assignable_without_func_def . '/' expr_without_func_def
   39                      | assignable_without_func_def . '%' expr_without_func_def
   41                      | assignable_without_func_def .

    AND  shift, and go to state 92
    OR   shift, and go to state 93
    NE   shift, and go to state 94
    EQ   shift, and go to state 95
    LE   shift, and go to state 96
    GE   shift, and go to state 97
    ','  shift, and go to state 98
    '<'  shift, and go to state 99
    '>'  shift, and go to state 100
    '+'  shift, and go to state 101
    '-'  shift, and go to state 102
    '*'  shift, and go to state 103
    '/'  shift, and go to state 104
    '%'  shift, and go to state 105

    ','       [reduce using rule 41 (expr_without_func_def)]
    $default  reduce using rule 41 (expr_without_func_def)


State 45

   95 func_returnable: nameles_func_def .

    $default  reduce using rule 95 (func_returnable)


State 46

   10 statement: RETURN func_returnable .

    $default  reduce using rule 10 (statement)


State 47

   12 statement: WHILE expr . DO list_of_statements END

    DO  shift, and go to state 106


State 48

   76 func_call: ID STRING .

    $default  reduce using rule 76 (func_call)


State 49

   72 func_call: ID '(' . list_of_assignable ')'
   73          | ID '(' . DOTS ')'
   74          | ID '(' . ')'

    FALSE     shift, and go to state 18
    FUNCTION  shift, and go to state 19
    NIL       shift, and go to state 20
    NOT       shift, and go to state 21
    TRUE      shift, and go to state 22
    ID        shift, and go to state 23
    NUM       shift, and go to state 24
    STRING    shift, and go to state 25
    DOTS      shift, and go to state 107
    '-'       shift, and go to state 26
    '('       shift, and go to state 27
    ')'       shift, and go to state 108
    '{'       shift, and go to state 28

    list_of_assignable           go to state 109
    assignable_without_func_def  go to state 29
    table_index                  go to state 30
    expr                         go to state 67
    assignable                   go to state 32
    func_call                    go to state 33
    table_def                    go to state 34
    nameles_func_def             go to state 35


State 50

   75 func_call: ID table_def .

    $default  reduce using rule 75 (func_call)


State 51

    0 $accept: program $end .

    $default  accept


State 52

    3 list_of_statements: list_of_statements statement .

    $default  reduce using rule 3 (list_of_statements)


State 53

    4 statement: list_of_id '=' . list_of_assignable
